--- a/tiantian/css/20180308.css
+++ b/tiantian/css/20180308.css
@@ -6,8 +6,9 @@ html{
 html body{
     width: inherit;
     height: inherit;
-    background:#fff url('../imgs/20180308bg.jpg') no-repeat left top;
-    background-size:100%;
+    background:url('../imgs/20180308bg.jpg') no-repeat;
+    background-size:100% 100%;
+    overflow: hidden;
   }
 
 html body #msg{
